<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.yiyun.lockcontroller.view.DropDownView
        android:id="@+id/drop_down_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:containerBackgroundColor="@color/dropDownContainerColor"
        app:overlayColor="@color/transparentGray" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:text="请输入授权临时开锁信息"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_msg_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_lock_form_white">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@+id/et_stuNo"
            android:layout_alignBottom="@+id/et_stuNo"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/lock_auto_add_stuNo"
            android:textColor="@color/textViewMsgColor"
            android:textSize="@dimen/text_msg_size" />

        <EditText
            android:id="@+id/et_stuNo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/textView"
            android:gravity="center"
            android:text="13201318"
            android:inputType="number"
            android:labelFor="@id/et_stuNo"
            android:textSize="12sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_selectTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_lock_form_white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_starttime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_msg_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/lock_auto_add_startTime"
                android:textColor="@color/textViewMsgColor"
                android:textSize="@dimen/text_msg_size" />

            <TextView
                android:id="@+id/tv_starttime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/iv_starttime"
                android:gravity="center_vertical"
                android:text="@string/lock_auto_add_default" />

            <ImageView
                android:id="@+id/iv_starttime"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:padding="4dp"
                android:src="@drawable/ic_right_arrow" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_endtime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_msg_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/lock_auto_add_endTime"
                android:textColor="@color/textViewMsgColor"
                android:textSize="@dimen/text_msg_size" />

            <TextView
                android:id="@+id/tv_endtime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/iv_endtime"
                android:gravity="center_vertical"
                android:text="@string/lock_auto_add_default" />

            <ImageView
                android:id="@+id/iv_endtime"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:padding="4dp"
                android:src="@drawable/ic_right_arrow" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/ll_allday"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="共" />

            <TextView
                android:id="@+id/tv_allday"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="天" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_selectCount"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_msg_height"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_lock_form_white"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_allowtimes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/lock_auto_add_allowCount"
            android:textColor="@color/textViewMsgColor"
            android:textSize="@dimen/text_msg_size" />

        <EditText
            android:id="@+id/et_allowtimes"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/tv_allowtimes"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/et_allowtimes"
            android:gravity="center"
            android:text="次"
            android:textColor="@color/textViewMsgColor"
            android:textSize="@dimen/text_msg_size" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_complete_height"
        android:layout_marginTop="25dp"
        android:text="确认" />


</LinearLayout>