<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="12dp"
        android:text="@string/register_return"
        android:textColor="@color/white"
        android:textSize="16sp" />


    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="start|center_vertical"
        android:text="@string/register_hint"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_login_edit"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginEnd="10dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_person" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="姓名"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="18sp" />


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="280dp"
            android:layout_height="1px"
            android:layout_gravity="center"
            android:background="#ccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginEnd="10dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_phone" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="手机号码"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="18sp" />


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="280dp"
            android:layout_height="1px"
            android:layout_gravity="center"
            android:background="#ccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginEnd="10dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_card" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/et_idCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:digits="0123456789xX"
                    android:hint="身份证号码"
                    android:inputType="textVisiblePassword"
                    android:maxLength="18"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="18sp" />


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="280dp"
            android:layout_height="1px"
            android:layout_gravity="center"
            android:background="#ccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginEnd="10dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_lock" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_passward"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="密码"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="18sp" />


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginEnd="10dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_lock" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/et_check_passward"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="请再次输入密码"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="18sp" />


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_ok"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_login_button"
        android:text="@string/register_ok"
        android:textColor="@color/blueWhite"
        android:textSize="18sp" />

</LinearLayout>